--- a/index.html
+++ b/index.html
@@ -3,37 +3,59 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Toeshal.me by hotgrill88</title>
-
+    <title>toeshal.me by hotgrill88</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/hotgrill88/toeshal.me">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/hotgrill88/toeshal.me/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/hotgrill88/toeshal.me/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header class="without-description">
-        <h1>Toeshal.me</h1>
-        <p></p>
-        <p class="view"><a href="https://github.com/hotgrill88/toeshal.me">View the Project on GitHub <small>hotgrill88/toeshal.me</small></a></p>
-        <ul>
-          <li><a href="https://github.com/hotgrill88/toeshal.me/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/hotgrill88/toeshal.me/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/hotgrill88/toeshal.me">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
+
       <section>
+        <div id="title">
+          <h1>toeshal.me</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/hotgrill88">hotgrill88</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <p>8)</p>
+
+<p><strong>asdfsadfasdf</strong></p>
+
+<h2>
+<a id="asdf" class="anchor" href="#asdf" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>asdf##</h2>
+
+<p>asdfasdfasdfasdf</p>
+
+<blockquote>
+<p>asdf
+asdfasdf</p>
+</blockquote>
+
+<p>asdfasdfasdf</p>
       </section>
+
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/hotgrill88">hotgrill88</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
